# oraqle

./: .gitignore  404.html  CITATION.cff  LICENSE.txt  README.md  addchain_cache.db  index.html  main.cpp  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg
.github/workflows/: github_pages.yml  publish_to_pypi.yml  python-app.yml
api/abstract_nodes_api/: index.html
api/addition_chains_api/: index.html
api/circuits_api/: index.html
api/code_generation_api/: index.html
api/nodes_api/: index.html
api/pareto_fronts_api/: index.html
config/: index.html
docs/: config.md  example_circuits.md  getting_started.md  index.md  tutorial_running_exps.md
docs/api/: abstract_nodes_api.md  addition_chains_api.md  circuits_api.md  code_generation_api.md  nodes_api.md  pareto_fronts_api.md
example_circuits/: index.html
getting_started/: index.html
helib_template/: addchain_cache.db  main.cpp
oraqle/: __init__.py  addchain_cache.db  config.py
oraqle/add_chains/: __init__.py  addition_chains.py  addition_chains_front.py  addition_chains_heuristic.py  addition_chains_mod.py  memoization.py  solving.py
oraqle/circuits/: __init__.py  aes.py  cardio.py  median.py  mimc.py  sorting.py  veto_voting.py
oraqle/compiler/: __init__.py  circuit.py  func2poly.py  graphviz.py  instructions.py  poly2circuit.py
oraqle/demo/: depth_aware_equality.ipynb  playground.ipynb  (+2 more)
search/: search_index.json
tests/: test_circuit_sizes_costs.py  test_poly2circuit.py  test_sugar_expressions.py
tutorial_running_exps/: index.html
(+73 files in other folders)
