[project]
name = "oraqle"
description = "Secure computation compiler for MPC, FHE, and arithmetic circuits in general"
version = "0.0.1"
requires-python = ">= 3.8"
authors = [
  {name = "Jelle Vos", email = "J.V.Vos@tudelft.nl"},
]
maintainers = [
  {name = "Jelle Vos", email = "J.V.Vos@tudelft.nl"}
]
readme = "README.md"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
profile = "black"
skip_gitignore = true

[tool.black]
line_length = 100
