[project]
name = "oraqle"
description = "Secure computation compiler for homomorphic encryption and arithmetic circuits in general"
version = "0.1.5"
requires-python = ">= 3.8"
authors = [
  {name = "Jelle Vos", email = "J.V.Vos@tudelft.nl"},
]
maintainers = [
  {name = "Jelle Vos", email = "J.V.Vos@tudelft.nl"}
]
readme = "README.md"
